# gsim

./: .gitignore  BUILD.bazel  LICENSE  Makefile  analysis.txt  gsim  main.cc  main.py  vscode.code-workspace
benchmarking/: analyze.py  benchmark.sh  plot_error.py  run_benchmark.sh
common/: BUILD.bazel  numerical_types.h  timers.cc  timers.h
controller/: BUILD.bazel  controller.py
include/: model.h  numerical_types.h  octtree.h  particle.h  timers.h
model/: BUILD.bazel  model.cc  model.h  py_model.cc
octtree/: BUILD.bazel  octtree.cc  octtree.h  particle.cc  particle.h
python/: view.py
src/: main.cc  model.cc  octtree.cc  particle.cc  timers.cc
viewer/: BUILD.bazel  viewer.py
