load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

cc_library(
	name = "model",
	hdrs = ["model.h"],
	srcs = ["model.cc"],
	deps = [
		"//gsim/common:numerical_types",
		"//gsim/common:timers",
		"//gsim/octtree",
		"//gsim/octtree:particle",
	],
	copts = [
		"-fopenmp",
		"-std=c++17",
	],
	linkopts = ["-fopenmp"],
	visibility = ["//gsim:__pkg__"],
)

pybind_extension(
	name = "py_model",
	srcs = ["py_model.cc"],
	deps = [
		":model",
		"//gsim/octtree:particle",
	],
	visibility = ["//gsim:__subpackages__"],
)
